--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -49,11 +49,12 @@ jobs:
   prettier:
     name: Prettier
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout 🛎️
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Set up Node 12.x
-      - uses: actions/setup-node@v1
+        uses: actions/setup-node@v1
         with:
           node-version: 12.x
       - name: Install required dependency for node
