Setup the linter.yml

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -62,4 +62,4 @@ jobs:
           npm install
       - name: Run Prettier
         run: |
-          npm run format:check Ad
+          npm run format:check 
