--- a/.hintrc
+++ b/.hintrc
@@ -3,16 +3,15 @@
       "name": "local",
       "options": {
         "pattern": ["**", "!.git/**", "!node_modules/**"]
+      },
+      "extends": ["development"],
+      "formatters": ["stylish"],
+      "hints": {
+        "button-type": "error",
+        "disown-opener": "error",
+        "html-checker": "error",
+        "meta-charset-utf-8": "error",
+        "meta-viewport": "error",
+        "no-inline-styles": "error"
       }
-    },
-    "extends": ["development"],
-    "formatters": ["stylish"],
-    "hints": [
-      "button-type",
-      "disown-opener",
-      "html-checker",
-      "meta-charset-utf-8",
-      "meta-viewport",
-      "no-inline-styles:error"
-    ]
-  }
+    }
