--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ibukun53/personal-portfolio#readme",
   "devDependencies": {
+    "css-aspect-ratio": "^1.0.5",
     "hint": "^6.1.4",
     "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
